Service tests with both Mockito and H2